--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -6,8 +6,7 @@
         <div class="title"><h1 class="h1">FAQ - Frequently Asked Questions</h1></div>
 
         <div class="sub-title">
-          <p class="p_large pre-line">Rádi vám odpovíme na každou otázkou.
-            Máte zájem o partnerství? Napište nám, ozveme se.</p>
+          <p class="p_large pre-line" [innerHTML]="'FAQ.subtitle' | translate"></p>
         </div>
 
       </header>
