--- a/src/app/table-history-reviews/table-history-reviews.component.html
+++ b/src/app/table-history-reviews/table-history-reviews.component.html
@@ -13,13 +13,13 @@
               <table>
                 <thead>
                 <tr>
-                  <th align="center">Datum:</th>
-                  <th>Vstupní systém:</th>
-                  <th>Vstupní částka:</th>
-                  <th>Výstupní systém:</th>
-                  <th>Výstupní částka:</th>
-                  <th>Status:</th>
-                  <th>Hodnocení:</th>
+                  <th>{{ 'table.HistoryReviews.col1' | translate }}:</th>
+                  <th>{{ 'table.HistoryReviews.col2' | translate }}:</th>
+                  <th>{{ 'table.HistoryReviews.col3' | translate }}:</th>
+                  <th>{{ 'table.HistoryReviews.col4' | translate }}:</th>
+                  <th>{{ 'table.HistoryReviews.col5' | translate }}:</th>
+                  <th align="left">{{ 'table.HistoryReviews.col6' | translate }}:</th>
+                  <th>{{ 'table.HistoryReviews.col7' | translate }}:</th>
                 </tr>
                 </thead>
 
@@ -43,7 +43,98 @@
                   <td>
                     <div class="transfer-status">
                       <div class="loader"><div class="loader-inside"></div></div>
-                      Částka se ověřuje
+                      {{ 'table.status.Verifying' | translate }}
+                    </div>
+                  </td>
+                  <td align="center">
+                    <div class="rating rating-static">
+                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                    </div>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td class="transfer-name"><b>26.12</b>.2017</td>
+                  <td>
+                    <div class="currency">
+                      <div class="currency-name">Adv Cash</div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
+                    </div>
+                  </td>
+                  <td align="right">10.00 <b>USD</b></td>
+                  <td>
+                    <div class="currency">
+                      <div class="currency-name">Bitcoin</div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/bitcoin.png);"></div>
+                    </div>
+                  </td>
+                  <td align="right">0.00018 <b>BTC</b></td>
+                  <td>
+                    <div class="transfer-status">
+                      <span class="circle circle-green"></span>
+                      {{ 'table.status.Successfully' | translate }}
+                    </div>
+                  </td>
+                  <td align="center">
+                    <div class="rating rating-static">
+                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
+                    </div>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td class="transfer-name"><b>26.12</b>.2017</td>
+                  <td>
+                    <div class="currency">
+                      <div class="currency-name">Adv Cash</div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
+                    </div>
+                  </td>
+                  <td align="right">8.00 <b>USD</b></td>
+                  <td>
+                    <div class="currency">
+                      <div class="currency-name">Ethereum</div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/etherium.png);"></div>
+                    </div>
+                  </td>
+                  <td align="right">0.00000013 <b>ETH</b></td>
+                  <td>
+                    <div class="transfer-status">
+                      <span class="circle circle-red"></span>
+                      {{ 'table.status.Failed' | translate }}
+                    </div>
+                  </td>
+                  <td align="center">{{ 'table.status.NoRating' | translate }}</td>
+                </tr>
+
+                <tr>
+                  <td class="transfer-name"><b>26.12</b>.2017</td>
+                  <td>
+                    <div class="currency">
+                      <div class="currency-name">Adv Cash</div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
+                    </div>
+                  </td>
+                  <td align="right">10.00 <b>USD</b></td>
+                  <td>
+                    <div class="currency">
+                      <div class="currency-name">Bitcoin</div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/bitcoin.png);"></div>
+                    </div>
+                  </td>
+                  <td align="right">0.00018 <b>BTC</b></td>
+                  <td>
+                    <div class="transfer-status">
+                      <div class="loader"><div class="loader-inside"></div></div>
+                      <div [innerHTML]="'table.status.Waiting' | translate"></div>
                     </div>
                   </td>
                   <td align="center">
@@ -112,7 +203,7 @@
                       Platba se nezdařila
                     </div>
                   </td>
-                  <td align="center">Nehodnoceno</td>
+                  <td align="center">{{ 'table.status.NoRating' | translate }}</td>
                 </tr>
 
                 <tr>
@@ -203,98 +294,7 @@
                       Platba se nezdařila
                     </div>
                   </td>
-                  <td align="center">Nehodnoceno</td>
-                </tr>
-
-                <tr>
-                  <td class="transfer-name"><b>26.12</b>.2017</td>
-                  <td>
-                    <div class="currency">
-                      <div class="currency-name">Adv Cash</div>
-                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
-                    </div>
-                  </td>
-                  <td align="right">10.00 <b>USD</b></td>
-                  <td>
-                    <div class="currency">
-                      <div class="currency-name">Bitcoin</div>
-                      <div class="currency-icons" style="background-image: url(../assets/img/bitcoin.png);"></div>
-                    </div>
-                  </td>
-                  <td align="right">0.00018 <b>BTC</b></td>
-                  <td>
-                    <div class="transfer-status">
-                      <div class="loader"><div class="loader-inside"></div></div>
-                      Částka se ověřuje
-                    </div>
-                  </td>
-                  <td align="center">
-                    <div class="rating rating-static">
-                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                    </div>
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="transfer-name"><b>26.12</b>.2017</td>
-                  <td>
-                    <div class="currency">
-                      <div class="currency-name">Adv Cash</div>
-                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
-                    </div>
-                  </td>
-                  <td align="right">10.00 <b>USD</b></td>
-                  <td>
-                    <div class="currency">
-                      <div class="currency-name">Bitcoin</div>
-                      <div class="currency-icons" style="background-image: url(../assets/img/bitcoin.png);"></div>
-                    </div>
-                  </td>
-                  <td align="right">0.00018 <b>BTC</b></td>
-                  <td>
-                    <div class="transfer-status">
-                      <span class="circle circle-green"></span>
-                      Úspěšně proběhlo
-                    </div>
-                  </td>
-                  <td align="center">
-                    <div class="rating rating-static">
-                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                      <div class="star is-active"><img src="../assets/img/svg/star.svg" alt="" class="img-svg"></div>
-                    </div>
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="transfer-name"><b>26.12</b>.2017</td>
-                  <td>
-                    <div class="currency">
-                      <div class="currency-name">Adv Cash</div>
-                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
-                    </div>
-                  </td>
-                  <td align="right">8.00 <b>USD</b></td>
-                  <td>
-                    <div class="currency">
-                      <div class="currency-name">Ethereum</div>
-                      <div class="currency-icons" style="background-image: url(../assets/img/etherium.png);"></div>
-                    </div>
-                  </td>
-                  <td align="right">0.00000013 <b>ETH</b></td>
-                  <td>
-                    <div class="transfer-status">
-                      <span class="circle circle-red"></span>
-                      Platba se nezdařila
-                    </div>
-                  </td>
-                  <td align="center">Nehodnoceno</td>
+                  <td align="center">{{ 'table.status.NoRating' | translate }}</td>
                 </tr>
                 </tbody>
               </table>
@@ -304,7 +304,7 @@
 
         <div class="paginator__wr">
           <div class="paginator">
-            <div class="paginator__status"><span class="">Zobrazeno <b>3</b> z <b>15</b></span></div>
+            <div class="paginator__status"><span class=""><b>3</b> {{ 'exchange.PaginationOf' | translate }} <b>15</b></span></div>
             <div class="paginator__btns">
 
               <ul class="pages pages_desktop">
@@ -338,7 +338,7 @@
         </div>
 
         <div class="fixed-head desktop-only">
-          <a href="#" class="btn btn-accentSecond rippler rippler-default">Nová směna</a>
+          <a href="#" class="btn btn-accentSecond rippler rippler-default">{{ 'exchange.NewExchange' | translate }}</a>
         </div>
       </div>
     </div>
