--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -30,7 +30,7 @@
               </div>
 
               <div class="step-info">
-                <div class="line-sides">ID transakce</div>
+                <div class="line-sides">{{ 'exchange.TransactionID' | translate }}</div>
 
                 <div class="step-info__title">ADVUSD-PM-1031</div>
 
@@ -77,7 +77,7 @@
             </div>
 
             <div class="transcations-info">
-              <div class="line-sides">Informace o platbě</div>
+              <div class="line-sides">{{ 'exchange.PaymentInfo' | translate }}</div>
 
               <div class="exchange">
                 <table class="exchange-info__direction">
@@ -103,7 +103,7 @@
                 </table>
               </div>
 
-              <div class="line-sides">Aktuální status</div>
+              <div class="line-sides">{{ 'exchange.CurrentStatus' | translate }}</div>
 
               <div class="stages">
                 <div class="progress-bar green animate">
@@ -170,7 +170,7 @@
                   </div>
 
                   <div class="mobile-only text-center">
-                    <a href="#" class="btn btn-accentSecond rippler rippler-default">Nová směna</a>
+                    <a href="#" class="btn btn-accentSecond rippler rippler-default">{{ 'exchange.NewExchange' | translate }}</a>
                   </div>
                 </form>
               </div>
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="fixed-head desktop-only">
-          <a href="#" class="btn btn-accentSecond rippler rippler-default">Nová směna</a>
+          <a href="#" class="btn btn-accentSecond rippler rippler-default">{{ 'exchange.NewExchange' | translate }}</a>
         </div>
 
       </div>
