--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1811,7 +1811,7 @@ hr
 		text-transform: uppercase
 		margin-left: auto
 		flex-shrink: 0
-		margin-left: 1rem
+		padding-left: 1rem
 
 .checkbox
 	display: -webkit-flex
